klass-model-converters/klass-compiler/src/test/resources/errors/DoubleOwnedAssociation.klass
package dummy

association DoubleOwnedAssociation
{
    owned source: DoubleOwnedClass[1..1]
    owned target: DoubleOwnedClass[1..1]
}

class DoubleOwnedClass
{
}
